# qbmove-ros-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  robot.wiki  rpm.store  tracks.yaml  tutorials.wiki
config/: default.yaml
debian/: changelog  control  gbp.conf  rules
include/qb_move_hardware_interface/: qb_move_transmission_interface.h
launch/: qb_move.launch  waypoint_control.launch
qb_move/: CHANGELOG.rst  CMakeLists.txt  package.wiki  package.xml
qb_move_control/: CHANGELOG.rst  CMakeLists.txt  package.wiki
qb_move_control/config/: qbmove_controllers.yaml  qbmove_waypoints.yaml
qb_move_control/include/qb_move_control/: qb_move_control.h
qb_move_control/launch/: gui_control.launch
qb_move_control/src/: main.cpp
qb_move_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
qb_move_description/urdf/: qb_move.materials.xacro  qb_move.urdf.xacro  qb_move.utils.xacro
qb_move_hardware_interface/: CHANGELOG.rst  CMakeLists.txt  package.wiki  package.xml
qb_move_hardware_interface/include/qb_move_hardware_interface/: qb_move_hardware_interface.h
qb_move_hardware_interface/src/: qb_move_hardware_interface.cpp
rpm/: ros-kinetic-qb-move-description.spec  ros-kinetic-qb-move-hardware-interface.spec  ros-kinetic-qb-move.spec  template.spec
rviz/: qb_move.rviz
src/: qb_move_control.cpp
