<package format="2">
  <name>qb_move_control</name>
  <version>1.0.1</version>
  <description>
    This package contains the ROS control node for qbrobotics® qbmove device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbmove-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbmove-ros</url>
  <url type="website">http://wiki.ros.org/qb_move_control</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>qb_device_control</depend>
  <depend>qb_move_hardware_interface</depend>

  <!--TODO: <test_depend>gtest</test_depend>-->
  <doc_depend>doxygen</doc_depend>
</package>