<package format="2">
  <name>qb_move</name>
  <version>1.0.1</version>
  <description>
    This package contains the ROS interface for qbrobotics® qbmove device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbmove-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbmove-ros</url>
  <url type="website">http://wiki.ros.org/qb_move</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>qb_move_control</exec_depend>
  <exec_depend>qb_move_description</exec_depend>
  <exec_depend>qb_move_hardware_interface</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>